<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="facebook_app_id" tools:ignore="ResourceName">882664668572429</string>
    <string name="fb_login_protocol_scheme" tools:ignore="ResourceName">fb882664668572429</string>

    <string name="login_app_name">LoginModule</string>

    <!-- login email string -->
    <string name="login_title">Please login with your email</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_enter_email_address">Email</string>
    <string name="login_enter_password">Password</string>
    <string name="login_log_in">Log in</string>
    <string name="login_forget_password">Forget Password</string>
    <string name="login_wrong_password">Account or password error.</string>

    <!-- sign up string -->

    <string name="login_create_account_title">Create Account</string>
    <string name="login_signup_enter_email_address">Email</string>
    <string name="login_input_wrong_email_warning">Please enter a valid email address.</string>
    <string name="login_signup_enter_password">Password</string>
    <string name="login_input_security_code">Input security code</string>
    <string name="login_send_security_code">Send security code</string>
    <string name="login_resend_security_code">Resend</string>
    <string name="login_click_indicate_agree">By signing up you indicate that you have read and agree to the </string>
    <string name="login_service_privacy">Terms of Service and Privacy Policy.</string>
    <string name="login_signup_succeed_title">Sign up Complete</string>
    <string name="login_signup_error_prompt">Sign up error!</string>

    <string name="login_select_privacy">Please read and confirm the terms below. </string>
    <string name="login_next">Next</string>
    <string name="login_finish">Finish</string>
    <string name="login_skip">Skip</string>
    <string name="login_password_tip">Password must have a at least 6 characters.</string>

    <!-- fill in profile string -->

    <string name="login_input_name">What\'s your name?</string>
    <string name="login_input_name_reason">Using your name makes it easy for you to communicate in our community.</string>
    <string name="login_first_name">First Name</string>
    <string name="login_last_name">Last Name</string>
    <string name="login_input_no_name_warning">Please enter your first name and last name.</string>
    <string name="login_input_gender">What\'s your gender?</string>
    <string name="login_gender_male">Male</string>
    <string name="login_gender_female">Female</string>
    <string name="login_gender_robot">Robot</string>
    <string name="login_input_birthday">What\'s your birthday?</string>

    <!--  forget password string -->

    <string name="login_forget_password_title">Forget Password?</string>
    <string name="login_forget_password_reason">We will send you a security code for you to reset your password.</string>
    <string name="login_forget_password_enter_email">Email</string>
    <string name="login_forget_password_input_code">Input security code</string>
    <string name="login_forget_password_send_code">Send security code</string>
    <string name="login_sent_code_prompt">Security code has been sent!</string>
    <string name="login_sent_code_fail_prompt">Security code sent failed, please try again!</string>
    <string name="login_code_not_correct">Security code is not correct!</string>
    <string name="login_reset_password_title">Reset Password</string>
    <string name="login_input_new_password_reason">Please enter and confirm your new password below.</string>
    <string name="login_input_new_password">New password</string>
    <string name="login_input_new_password_again">Confirm password</string>
    <string name="login_password_confirm_not_match">Your new password and confirmation password do not match.</string>
    <string name="login_confirm">Confirm</string>

    <string name="login_login_failed">login failed !</string>
    <string name="login_login_success">login success !</string>
    <string name="login_no_account">plz input email !</string>
    <string name="login_no_password">plz input password !</string>
    <string name="login_error_email">plz input right email !</string>


    <string name="login_input_email">Please input your email</string>
    <string name="login_input_password">Please set a password</string>
    <string name="login_register_done">Done</string>

    <string name="login_age_less_16">Less than 16 years old</string>
    <string name="login_age_16_24">16 - 24 years old</string>
    <string name="login_age_25_35">25 - 35 years old</string>
    <string name="login_age_36_45">36 - 45 years old</string>
    <string name="login_age_more_46">46 and older</string>
    <string name="login_age_title">What's your age?</string>


</resources>
