<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_img_bg">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_14"
        android:layout_marginLeft="@dimen/dp_22"
        android:layout_marginTop="@dimen/dp_14"
        android:scaleType="fitXY"
        android:src="@drawable/ic_back"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_22"
        android:layout_marginTop="@dimen/dp_14"
        android:enabled="false"
        android:text="@string/login_next"
        android:textColor="@color/login_text_hint_color"
        android:textSize="@dimen/sp_15"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_28"
        android:text="@string/login_forget_password_title"
        android:textColor="@color/login_text_black_color"
        android:textSize="@dimen/sp_18"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_13"
        android:text="@string/login_forget_password_reason"
        android:textColor="@color/login_text_hint_color"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <ImageView
        android:id="@+id/iv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_28"
        android:scaleType="fitXY"
        android:src="@drawable/ic_email"
        app:layout_constraintBottom_toBottomOf="@+id/edt_email"
        app:layout_constraintLeft_toRightOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_28"
        android:background="@null"
        android:hint="@string/login_enter_email_address"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dp_12"
        android:textColor="@color/login_text_black_color"
        android:textColorHint="@color/login_text_hint_color"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toRightOf="@+id/iv_email"
        app:layout_constraintRight_toLeftOf="@+id/iv_clear_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint" />

    <ImageView
        android:id="@+id/iv_clear_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_28"
        android:padding="6dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_delete"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/edt_email"
        app:layout_constraintRight_toLeftOf="@+id/gl_right"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint" />

    <View
        android:id="@+id/loginView2"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/login_view_line_color"
        app:layout_constraintLeft_toRightOf="@id/iv_email"
        app:layout_constraintRight_toLeftOf="@+id/gl_right"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />


    <ImageView
        android:id="@+id/iv_security_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ic_security_code"
        app:layout_constraintBottom_toBottomOf="@+id/edt_security_code"
        app:layout_constraintLeft_toRightOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <EditText
        android:id="@+id/edt_security_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/login_input_security_code"
        android:imeOptions="flagNoExtractUi"
        android:padding="@dimen/dp_12"
        android:textColor="@color/login_text_black_color"
        android:textColorHint="@color/login_text_hint_color"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toRightOf="@+id/iv_security_code"
        app:layout_constraintRight_toLeftOf="@+id/btn_send_security"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <Button
        android:id="@+id/btn_send_security"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_26"
        android:background="@drawable/login_btn_security_code_selector"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/login_send_security_code"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_10"
        app:layout_constraintBottom_toBottomOf="@+id/edt_security_code"
        app:layout_constraintRight_toLeftOf="@+id/gl_right"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <View
        android:id="@+id/view_security_code_line"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/login_view_line_color"
        app:layout_constraintLeft_toRightOf="@id/iv_security_code"
        app:layout_constraintRight_toLeftOf="@+id/gl_right"
        app:layout_constraintTop_toBottomOf="@+id/edt_security_code" />

    <TextView
        android:id="@+id/tv_valid_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/login_input_wrong_email_warning"
        android:textColor="@color/login_bg_red_color"
        android:textSize="@dimen/sp_14"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@+id/gl_left"
        app:layout_constraintRight_toLeftOf="@+id/gl_right"
        app:layout_constraintTop_toBottomOf="@+id/view_security_code_line" />


</android.support.constraint.ConstraintLayout>