<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >



    <TextView
        android:id="@+id/tv_create_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_create_account_title"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/login_text_black_color"
        android:layout_marginTop="@dimen/dp_15"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        />



    <android.support.constraint.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"
        />
    <android.support.constraint.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"
        />

    <ImageView
        android:id="@+id/iv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_email"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/dp_28"
        app:layout_constraintLeft_toRightOf="@+id/gl_left"
        app:layout_constraintBottom_toBottomOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_account_title"
        />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_enter_email_address"
        android:textColorHint="@color/login_text_hint_color"
        android:textColor="@color/login_text_black_color"
        android:textSize="@dimen/sp_14"
        android:padding="@dimen/dp_12"
        android:background="@null"
        android:inputType="textEmailAddress"
        android:imeOptions="flagNoExtractUi"
        android:layout_marginTop="@dimen/dp_28"
        app:layout_constraintLeft_toRightOf="@+id/iv_email"
        app:layout_constraintRight_toLeftOf="@+id/iv_clear_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_account_title"
        />

    <ImageView
        android:id="@+id/iv_clear_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"
        android:layout_marginTop="@dimen/dp_28"
        android:scaleType="fitXY"
        android:padding="6dp"
        android:layout_marginRight="@dimen/dp_10"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/edt_email"
        app:layout_constraintRight_toLeftOf="@+id/view_div"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/login_view_line_color"
        app:layout_constraintLeft_toRightOf="@id/iv_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintRight_toLeftOf="@+id/gl_right"
        />



    <ImageView
        android:id="@+id/iv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_password"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintLeft_toRightOf="@+id/gl_left"
        app:layout_constraintBottom_toBottomOf="@+id/edt_password"
        />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_enter_password"
        android:textColorHint="@color/login_text_hint_color"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/login_text_black_color"
        android:inputType="textPassword"
        android:padding="@dimen/dp_12"
        android:background="@null"
        android:imeOptions="flagNoExtractUi"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintLeft_toRightOf="@+id/iv_password"
        app:layout_constraintRight_toLeftOf="@+id/iv_clear_password"
        />


    <ImageView
        android:id="@+id/iv_clear_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_10"
        android:src="@drawable/ic_delete"
        android:scaleType="fitXY"
        android:padding="6dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintRight_toLeftOf="@+id/view_div"
        app:layout_constraintBottom_toBottomOf="@+id/edt_password"
        />


    <View
        android:id="@+id/view_div"
        android:layout_width="@dimen/dp_1_5"
        android:layout_height="@dimen/dp_19"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/login_line_color"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintRight_toLeftOf="@+id/iv_show_password"
        app:layout_constraintBottom_toBottomOf="@+id/edt_password"
        />


    <ImageView
        android:id="@+id/iv_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ic_password_disshow"
        android:padding="6dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintBottom_toBottomOf="@+id/edt_password"
        app:layout_constraintRight_toLeftOf="@+id/gl_right"
        />

    <View
        android:id="@+id/view_password_line"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/login_view_line_color"
        app:layout_constraintLeft_toRightOf="@id/iv_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        app:layout_constraintRight_toLeftOf="@+id/gl_right"
        />

    <ImageView
        android:id="@+id/iv_security_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_security_code"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        app:layout_constraintLeft_toRightOf="@+id/gl_left"
        app:layout_constraintBottom_toBottomOf="@+id/edt_security_code"
        />

    <EditText
        android:id="@+id/edt_security_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_input_security_code"
        android:textColorHint="@color/login_text_hint_color"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/login_text_black_color"
        android:inputType="number"
        android:padding="@dimen/dp_12"
        android:background="@null"
        android:imeOptions="flagNoExtractUi"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        app:layout_constraintLeft_toRightOf="@+id/iv_security_code"
        app:layout_constraintRight_toLeftOf="@+id/btn_send_security"
        />

    <Button
        android:id="@+id/btn_send_security"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_26"
        android:background="@drawable/login_btn_security_code_selector"
        android:text="@string/login_send_security_code"
        android:textSize="@dimen/sp_10"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:gravity="center"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        app:layout_constraintRight_toLeftOf="@+id/gl_right"
        app:layout_constraintBottom_toBottomOf="@+id/edt_security_code"
        />

    <View
        android:id="@+id/view_security_code_line"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/login_view_line_color"
        app:layout_constraintLeft_toRightOf="@id/iv_security_code"
        app:layout_constraintTop_toBottomOf="@+id/edt_security_code"
        app:layout_constraintRight_toLeftOf="@+id/gl_right"
        />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg_login_btn"
        android:text="@string/login_sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_15"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/edt_security_code"
        app:layout_constraintLeft_toRightOf="@+id/gl_left"
        app:layout_constraintRight_toLeftOf="@+id/gl_right"
        />


    <ImageView
        android:id="@+id/iv_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_policy_row_selected"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginLeft="@dimen/dp_20"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
        app:layout_constraintLeft_toRightOf="@+id/gl_left"
        />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_10"
        android:textColor="@color/login_text_hint_color"
        android:text="@string/login_click_indicate_agree"
        android:gravity="center"
        android:paddingRight="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_6"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
        app:layout_constraintLeft_toRightOf="@+id/iv_privacy"
        />

    <TextView
        android:id="@+id/tv_service_privacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_11"
        android:textColor="@color/login_text_blue_color"
        android:text="@string/login_service_privacy"
        android:gravity="center"
        android:paddingRight="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@+id/tv_text"
        app:layout_constraintLeft_toRightOf="@+id/iv_privacy"
        app:layout_constraintRight_toLeftOf="@+id/gl_right"
        />







</android.support.constraint.ConstraintLayout>
